@@ -1,3 +1,8 @@
+2006-11-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	Output PAT and PMT info at debug level when changed.
+
 2006-11-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py:
